--- a/SneakerCards/templates/SneakerCards/template.html
+++ b/SneakerCards/templates/SneakerCards/template.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="{% static 'SneakerCards/css/main.css' %}">
     </head>
 
-    <div class="grid">
+    <div class="grid_container">
+
+        <div class="grid">
         <header class="page-header">
             <div class="content">
                 <p>Header</p>
@@ -51,6 +53,11 @@
         </footer>
 
     </div>
+
+
+
+    </div>
+
 </html>
 
 
