--- a/SneakerCards/templates/SneakerCards/template.html
+++ b/SneakerCards/templates/SneakerCards/template.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="{% static 'SneakerCards/css/main.css' %}">
     </head>
 
-    <div class="grid_container">
-
         <div class="grid">
         <header class="page-header">
             <div class="content">
@@ -19,28 +17,33 @@
         </header>
 
         <nav class="page-leftbar">
+            {% csrf_token %}
+
           <form method="get" action="{% url 'SneakerCards:index' %}">
             <button type="submit" class="menu-button">Home</button>
           </form>
           <form method="get" action="{% url 'SneakerCards:about' %}">
             <button type="submit" class="menu-button">About</button>
           </form>
-          <form method="get" action="{% url 'SneakerCards:register' %}">
-            <button type="submit" class="menu-button">Register</button>
-          </form>
-          <form method="get" action="{% url 'SneakerCards:login' %}">
-            <button type="submit" class="menu-button">Login</button>
-          </form>
-
-          <form method="get" action="{% url 'SneakerCards:add_cards' %}">
-            <button type="submit" class="menu-button">Add cards</button>
-          </form>
-
-          <form method="get" action="{% url 'SneakerCards:view_cards' %}">
-            <button type="submit" class="menu-button">SneakerDex</button>
-          </form>
+            {% if user.is_authenticated %}
+                <form method="get" action="{% url 'SneakerCards:dashboard' %}">
+                    <button type="submit" class="menu-button">Dashboard</button>
+                 </form>
+                <form method="get" action="{% url 'SneakerCards:view_cards' %}">
+                    <button type="submit" class="menu-button">SneakerDex</button>
+                </form>
+                <form method="get" action="{% url 'SneakerCards:logout' %}">
+                    <button type="submit" class="menu-button">Logout</button>
+                </form>
+            {% else %}
+                <form method="get" action="{% url 'SneakerCards:register' %}">
+                    <button type="submit" class="menu-button">Register</button>
+                </form>
+                <form method="get" action="{% url 'SneakerCards:login' %}">
+                     <button type="submit" class="menu-button">Login</button>
+                </form>
+            {% endif %}
         </nav>
-
         <main class="page-main">
                 {% block content %}
                 {% endblock %}
@@ -55,8 +58,6 @@
     </div>
 
 
-
-    </div>
 
 </html>
 
