--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -41,7 +41,7 @@ body{
 }
 
 .content {
-  color: #242424;
+  color: #f2f2f2;
   background-color: #717171;
   font-weight: 600;
   text-align: center;
@@ -49,7 +49,6 @@ body{
   height: 100%;
   padding: 10px;
   border-radius: 40px;
-  opacity: 0.6;
 
 
 }
@@ -82,10 +81,6 @@ body{
 
 .menu-button:hover::before{
   left:100%;
-}
-
-.menu-button:hover{
-  color:whitesmoke;
 }
 
 .containerForm {
@@ -183,3 +178,39 @@ body{
   from {opacity: .4}
   to {opacity: 1}
 }
+
+.sidebar{
+  background-color: #242424;
+  border-right: 8px #242424;
+  width: 55px;
+  padding: 50px 0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  position: relative;
+  transition: .5s;
+
+}
+
+.bi-chevron-double-right{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.sidebar .item{
+  display:flex;
+  align-items: center;
+  gap: 20px;
+  padding: 10px 20px;
+}
+
+.sidebar .item:hover{
+  border-right: 1px #5ad;
+  background-color: rgba(255,255,255,0.1);
+  opacity: 0.8;
+  cursor: pointer;
+}
+
