--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -30,6 +30,7 @@ body{
 
 .page-leftbar {
   grid-area: leftbar;
+  padding: 0;
 }
 
 .page-main {
@@ -181,11 +182,13 @@ body{
 
 .sidebar{
   background-color: #242424;
-  border-right: 8px #242424;
+  border-right: 1px #242424;
+  color:whitesmoke;
   width: 55px;
   padding: 50px 0;
   border-radius: 10px;
   box-sizing: border-box;
+  overflow-x: hidden;
   position: relative;
   transition: .5s;
 
@@ -208,7 +211,7 @@ body{
 }
 
 .sidebar .item:hover{
-  border-right: 1px #5ad;
+  border-right: 1px #f2f2f2;
   background-color: rgba(255,255,255,0.1);
   opacity: 0.8;
   cursor: pointer;
