--- a/SneakerCards/templates/SneakerCards/dashboard.html
+++ b/SneakerCards/templates/SneakerCards/dashboard.html
@@ -12,13 +12,17 @@
                       <div class="sidebar">
                        <i class="bi bi-chevron-double-right" onclick="expandSidebar()"></i>
                        <div class="item">
-                           <i class="bi bi-house"></i>
-                           <span>One</span>
+                           <i class="bi bi-card-image"></i>
+                           <span>View deck</span>
                        </div>
                        <div class="item">
-                           <i class="bi bi-person"></i>
-                           <span>Two</span>
+                           <i class="bi bi-currency-dollar"></i>
+                           <span>Buy cards</span>
                        </div>
+                          <div class="item">
+                              <i class="bi bi-arrow-left-right"></i>
+                              <span>Trade Board</span>
+                          </div>
                    </div>
                 </div>
               </aside>
