Alterações na box register

--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -214,3 +214,10 @@ body{
   cursor: pointer;
 }
 
+.register{
+ color: white;
+}
+
+.register_box {
+   background-color: rgba(120,120,120,0.8);
+}
