--- a/SneakerCards/templates/SneakerCards/dashboard.html
+++ b/SneakerCards/templates/SneakerCards/dashboard.html
@@ -6,23 +6,33 @@
 {% block content %}
     <div class="content">
         <div class="grid">
-
                 <div class="content">
                   <aside class="page-leftbar">
                       <div class="sidebar">
                        <i class="bi bi-chevron-double-right" onclick="expandSidebar()"></i>
-                       <div class="item">
-                           <i class="bi bi-card-image"></i>
-                           <span>View deck</span>
-                       </div>
-                       <div class="item">
-                           <i class="bi bi-currency-dollar"></i>
-                           <span>Buy cards</span>
-                       </div>
-                          <div class="item">
-                              <i class="bi bi-arrow-left-right"></i>
-                              <span>Trade Board</span>
+                          {% if user.is_superuser %}
+                            <div class="item">
+                                <i class="bi bi-person-circle"></i>
+                                <span>Add cards</span>
+                            </div>
+                            <div class="item">
+                                <i class="bi bi-person-circle"></i>
+                                <span>Inspect user decks</span>
+                            </div>
+                          {% else %}
+                              <div class="item">
+                                  <i class="bi bi-card-image"></i>
+                                  <span>View deck</span>
+                              </div>
+                            <div class="item">
+                                <i class="bi bi-currency-dollar"></i>
+                                <span>Buy cards</span>
+                            </div>
+                            <div class="item">
+                                <i class="bi bi-arrow-left-right"></i>
+                                <span>Trade Board</span>
                           </div>
+                          {% endif %}
                    </div>
                 </div>
               </aside>
