- Admins can add cards now

--- a/SneakerCards/templates/SneakerCards/dashboard.html
+++ b/SneakerCards/templates/SneakerCards/dashboard.html
@@ -13,7 +13,7 @@
                           {% if user.is_superuser %}
                             <div class="item">
                                 <i class="bi bi-person-circle"></i>
-                                <span>Add cards</span>
+                                <a href="{%url 'SneakerCards:add_cards' %}"><span>Add cards</span></a>
                             </div>
                             <div class="item">
                                 <i class="bi bi-person-circle"></i>
