--- a/SneakerCards/templates/SneakerCards/about.html
+++ b/SneakerCards/templates/SneakerCards/about.html
@@ -5,6 +5,11 @@
     {% endif %}
     <h1>About</h1>
     <fieldset>
+        O nosso website dá-te a possibilidade de colecionares cartas.
+        Mas não são cartas quaisquer!
+        Damos-te a possibilidade de trocar de cartas de jogo com outros utilizadores já existentes, como também a compra
+        e venda das mesmas.
+        Atualmente já se encontram disponiveis cerca de 36 cartas.
         No nosso site:
         Utilizadores/Jogadores/Colecionadores: compram “Boosters” (conjunto de várias
         cartas aleatórias) e podem mais tarde fazer posts a solicitar troca de cartas.
