--- a/SneakerCards/templates/SneakerCards/dashboard.html
+++ b/SneakerCards/templates/SneakerCards/dashboard.html
@@ -1,62 +1,17 @@
-{%  extends 'SneakerCards/template.html' %}
-{% block head %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
-        integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-{% endblock head %}
-{% block content %}
-    <div class="content">
-        <div class="grid">
-                <div class="content">
-                  <aside class="page-leftbar">
-                      <div class="sidebar">
-                       <i class="bi bi-chevron-double-right" onclick="expandSidebar()"></i>
-                          {% if user.is_superuser %}
-                            <div class="item">
-                                <i class="bi bi-person-circle"></i>
-                                <a href="{%url 'SneakerCards:add_cards' %}"><span>Add cards</span></a>
-                            </div>
-                            <div class="item">
-                                <i class="bi bi-person-circle"></i>
-                                <span>Inspect user decks</span>
-                            </div>
-                          {% else %}
-                              <div class="item">
-                                  <i class="bi bi-card-image"></i>
-                                  <span>View deck</span>
-                              </div>
-                            <div class="item">
-                                <i class="bi bi-currency-dollar"></i>
-                                <span>Buy cards</span>
-                            </div>
-                            <div class="item">
-                                <i class="bi bi-arrow-left-right"></i>
-                                <span>Trade Board</span>
-                          </div>
-                          {% endif %}
-                   </div>
-                </div>
-              </aside>
-              <main class="page-main">
-                <div class="content">
-
-                </div>
-        </div>
-    </div>
-
-
-<script>
-    let expanded = false
-    function expandSidebar() {
-        if (expanded) {
-            document.getElementsByClassName('sidebar')[0].style.width = '55px'
-            document.getElementsByClassName('bi-chevron-double-right')[0].style.transform = 'rotate(0deg)'
-            document.getElementsByClassName('bi-chevron-double-right')[0].style.right = '20px'
-        } else {
-            document.getElementsByClassName('sidebar')[0].style.width = '200px'
-            document.getElementsByClassName('bi-chevron-double-right')[0].style.transform = 'rotate(180deg)'
-            document.getElementsByClassName('bi-chevron-double-right')[0].style.right = '10px'
-        }
-        expanded = !expanded
-    }
-</script>
-{% endblock content %}
+{%  extends 'SneakerCards/logged_template.html' %}
+{% block userContent %}
+    <h1>Dashboard</h1>
+    {% if user.is_authenticated %}
+        {%csrf_token%}
+        <fieldset>
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" value="{{ user.username }}" disabled><br>
+            <label for="full_name">Nome completo:</label><br>
+            <input type="text" id="full_name" name="full_name" value="{{ user.collector.full_name }}" disabled><br>
+            <label for="email">Email:</label><br>
+            <input type="text" id="email" name="email" value="{{ user.email }}" disabled><br>
+        </fieldset>
+    {% else %}
+        <strong><h1>Something wrong, not logged</h1></strong>
+    {% endif %}
+{% endblock userContent %}
