--- a/SneakerCards/templates/SneakerCards/logged_template.html
+++ b/SneakerCards/templates/SneakerCards/logged_template.html
@@ -20,7 +20,7 @@
                           {% else %}
                               <div class="item">
                                   <i class="bi bi-card-image"></i>
-                                  <span>View deck</span>
+                                  <a href="{%url 'SneakerCards:my_deck' %}"><span>View deck</span></a>
                               </div>
                             <div class="item">
                                 <i class="bi bi-currency-dollar"></i>
