--- a/SneakerCards/templates/SneakerCards/view_cards.html
+++ b/SneakerCards/templates/SneakerCards/view_cards.html
@@ -17,18 +17,19 @@
                 <div class="content">
                     <!-- Slideshow container -->
                     <div class="slideshow-container">
-                      <!-- Full-width images with number and caption text -->
-                      <div class="mySlides fade">
-                        <img src="{% static 'SneakerCards/images/cards_final-04.png' %}" alt="">
-                      </div>
 
-                      <div class="mySlides fade">
-                        <img src="{% static 'SneakerCards/images/cards_final-02.png' %}"  alt="">
-                      </div>
 
-                      <div class="mySlides fade">
-                        <img src="{% static 'SneakerCards/images/cards_final-01.png' %}"  alt="">
-                      </div>
+                        {%  for Cards in deck %}
+                            <script> showSlides(slideIndex)</script>
+                            <!-- Full-width images with number and caption text -->
+                            <div class="mySlides fade">
+                                <p> {{ Cards.name }} </p>
+                                <img src="{{ Cards.image }}" alt="{{ Cards.description }}">
+
+                            </div>
+                        {% endfor %}
+
+
 
                       <!-- Next and previous buttons -->
                       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -36,7 +37,9 @@
                     </div>
                     <br>
                 </div>
-                </div>
+              </main>
+        </div>
+
     </div>
 {% endblock %}
 
