All sneakers in DB

--- a/SneakerCards/templates/SneakerCards/logged_template.html
+++ b/SneakerCards/templates/SneakerCards/logged_template.html
@@ -39,6 +39,7 @@
                     {% endblock userContent %}
                 
                 </div>
+              </main>
         </div>
 
 
