commit das ultimas alterações na parte de visualização do website

--- a/SneakerCards/templates/SneakerCards/about.html
+++ b/SneakerCards/templates/SneakerCards/about.html
@@ -3,7 +3,9 @@
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
-    <h1>About</h1>
+
+    <p>About us</p>
+    <div class="about">
     <fieldset>
         O nosso website dá-te a possibilidade de colecionares cartas.
         Mas não são cartas quaisquer!
@@ -14,4 +16,6 @@
         Utilizadores/Jogadores/Colecionadores: compram “Boosters” (conjunto de várias
         cartas aleatórias) e podem mais tarde fazer posts a solicitar troca de cartas.
     </fieldset>
+    </div>
+
 {% endblock content %}
