--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -59,10 +59,11 @@ body{
 .menu-button{
   padding: 20px 0;
   width: 200px;
-  background:#f2f2f2;
-  border: 1px whitesmoke;
-  color: #242424;
-  box-shadow : 0 0 5px 2px #bbbbbb;
+  background: rgba(255,255,255,0.85);
+  /*border: 1px whitesmoke;*/
+  color: black;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -70,6 +71,7 @@ body{
   letter-spacing: 2px;
   transition: .6s  ;
   border-radius: 15px;
+  font-family: Futura;
 }
 
 .menu-button::before{
