--- a/SneakerCards/templates/SneakerCards/logged_template.html
+++ b/SneakerCards/templates/SneakerCards/logged_template.html
@@ -24,7 +24,7 @@
                               </div>
                             <div class="item">
                                 <i class="bi bi-currency-dollar"></i>
-                                <span>Buy cards</span>
+                                <a href="{%url 'SneakerCards:buy_booster' %}"><span>Buy cards</span></a>
                             </div>
                             <div class="item">
                                 <i class="bi bi-arrow-left-right"></i>
