--- a/SneakerCards/templates/SneakerCards/template.html
+++ b/SneakerCards/templates/SneakerCards/template.html
@@ -8,6 +8,9 @@
     {% endblock head %}
     <link rel="stylesheet" href="{% static 'SneakerCards/css/main.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link href="https://fonts.cdnfonts.com/css/lucida-handwriting-std" rel="stylesheet">
+
+
 </head>
 
 <div class="grid">
