commit das ultimas alterações do login.html e main.css

--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -229,6 +229,11 @@ body{
    background-color: rgba(120,120,120,0.8);
 }
 
+.login{
+  color: white;
+}
+
+
 fieldset{
     background-color: rgba(120,120,120,0.8);
 }
