--- a/SneakerCards/templates/SneakerCards/my_decks.html
+++ b/SneakerCards/templates/SneakerCards/my_decks.html
@@ -1,10 +1,16 @@
 {% extends "SneakerCards/logged_template.html" %}
 {% block userContent %}
-{%load static%}
-    <div id="deck-grid-container">
-        <div class="deck-grid-item">Add item</div>
+    {%load static%}
+    <div class="deck-grid-container">
+      {% for deck in decks %}
+        <div class="deck-grid-item">{{deck.name}}</div>
+      {% empty %}
+        <div class="deck-grid-item">No decks</div>
+      {% endfor %}
     </div>
-    <button id="add-item-btn">Add item</button>
-    <script src="{% static 'SneakerCards/js/add_deck.js' %}"></script>
+      <form id="add-item-form" method="POST" action="{% url 'SneakerCards:update_deck' %}">
+        {% csrf_token %}
+        <button type="submit" id="add-item-btn">Add item</button>
+      </form>
 
 {% endblock userContent %}
