--- a/SneakerCards/static/SneakerCards/css/main.css
+++ b/SneakerCards/static/SneakerCards/css/main.css
@@ -300,17 +300,32 @@ fieldset{
 }
 
 
-#deck-grid-container{
-  display: grid;
-  grid-gap: 10px;
+#deck-grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  overflow-x: auto;
 }
 
-.deck-grid-item{
+#deck-grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10px;
+  overflow-x: auto;
+}
+
+.deck-grid-item {
   border: 1px solid black;
   padding: 10px;
   background-image: url('../images/background.png');
-  background-size: cover; /* Set the background image to cover the item */
+  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; /* Center the background image */
+  background-position: center;
   width: 200px;
+  flex: 0 0 calc(33.33% - 10px);
+  margin-bottom: 20px; /* Increase the vertical spacing between rows */
 }
