--- a/SneakerCards/templates/SneakerCards/about.html
+++ b/SneakerCards/templates/SneakerCards/about.html
@@ -3,19 +3,17 @@
     {% if error_message %}
         <p><strong>{{ error_message }}</strong></p>
     {% endif %}
-
+    <div class="about_title">
     <p>About us</p>
     <div class="about">
-    <fieldset>
-        O nosso website dá-te a possibilidade de colecionares cartas.
-        Mas não são cartas quaisquer!
-        Damos-te a possibilidade de trocar de cartas de jogo com outros utilizadores já existentes, como também a compra
-        e venda das mesmas.
-        Atualmente já se encontram disponiveis cerca de 36 cartas.
-        No nosso site:
-        Utilizadores/Jogadores/Colecionadores: compram “Boosters” (conjunto de várias
-        cartas aleatórias) e podem mais tarde fazer posts a solicitar troca de cartas.
-    </fieldset>
+        <fieldset>
+            <p>Our website gives you the possibility to collect cards.</p>
+            <p>But not just any cards!</p>
+            <p>We give you the possibility to exchange game cards with other existing users, as well as buying and selling them.</p>
+            <p>Around 36 cards are currently available.</p>
+            <p>On our website:</p>
+            <p>Users/Players/Collectors: buy “Boosters” (set of several random cards) and can later make posts requesting exchange of cards.</p>
+        </fieldset>
     </div>
-
+    </div>
 {% endblock content %}
