--- a/SneakerCards/templates/SneakerCards/logged_template.html
+++ b/SneakerCards/templates/SneakerCards/logged_template.html
@@ -9,24 +9,24 @@
                       <div class="sidebar">
                        <i class="bi bi-chevron-double-right" onclick="expandSidebar()"></i>
                           {% if user.is_superuser %}
-                            <div class="item">
+                            <div class="item" >
                                 <i class="bi bi-person-circle"></i>
                                 <a href="{%url 'SneakerCards:add_cards' %}"><span>Add cards</span></a>
                             </div>
-                            <div class="item">
+                            <div class="item" >
                                 <i class="bi bi-person-circle"></i>
                                 <span>Inspect user decks</span>
                             </div>
                           {% else %}
-                              <div class="item">
+                              <div class="item" >
                                   <i class="bi bi-card-image"></i>
-                                  <a href="{%url 'SneakerCards:my_deck' %}"><span>View deck</span></a>
+                                  <a href="{%url 'SneakerCards:my_deck' %}" class="meu-link"><span>View deck</span></a>
                               </div>
-                            <div class="item">
+                            <div class="item" >
                                 <i class="bi bi-currency-dollar"></i>
-                                <a href="{%url 'SneakerCards:buy_booster' %}"><span>Buy cards</span></a>
+                                <a href="{%url 'SneakerCards:buy_booster' %}" class="meu-link"><span>Buy cards</span></a>
                             </div>
-                            <div class="item">
+                            <div class="item" >
                                 <i class="bi bi-arrow-left-right"></i>
                                 <span>Trade Board</span>
                           </div>
